# evo_sim

./: .gitignore  BUILD.md  Cargo.toml  DESIGN.md  NOTICE  README.md  SKILL.md  add_headers.ps1  rebuild.ps1
sim/: Cargo.toml
sim/src/: carnivore.rs  config.rs  genome.rs  genome_def.rs  herbivore.rs  lib.rs  occupancy.rs  plant.rs  rng.rs  signature.rs  spatial.rs  terrain.rs
tools/: README.md  verify.cjs
tools/golden/: seed137_5000.txt
utils/: Cargo.toml
utils/src/: lib.rs  tracer.rs
web/: architecture.html  index.html  server.py  worker.js
